updated wireframe project and resume

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
           <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
 
 
-            I'm a tenacious developer with a passion for continuous learning, powerful design, and building intuitive applications.
+            I'm a tenacious developer with a passion for continuous learning, powerful design, and building intuitive applications. I started my journey in the tech field as an IT Project Manager  and quickly fell in love with the nitty-gritty of problem solving in code.
             <br><br>
-            I started my journey in the tech field as an IT Project Manager  and quickly fell in love with the nitty-gritty of problem solving in code. To me, tackling new challenges and transforming ideas into real products are the most rewarding parts of web development.
+            When I'm not coding you can find me climbing at Clear Creek Canyon or trail running at Marshall Mesa.
 
-          <br><br>Enough said, let's get to the good stuff!</p>
+            <br><br>Enough said, let's get to the good stuff!</p>
 
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Onwards!</a>
         </div>
@@ -159,8 +159,6 @@
     </div>
   </section>
 
-
-
   <section class="p-0 raleway" id="portfolio">
     <div class="container">
       <div class="row">
@@ -197,7 +195,7 @@
 
                 <!-- e/pro diagram preview -->
                 <div class="col-lg-6 col-sm-6">
-                  <a class="portfolio-box" href=# data-toggle="modal" data-target=".mappyhour">
+                  <a class="portfolio-box" href=# data-toggle="modal" data-target=".epro_wireframe">
                       <img class="img-fluid" src="img/portfolio/thumbnails/adobexd_mockup.jpeg" alt="">
                       <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -227,12 +225,11 @@
                     The Coffee Ride
                   </div>
                   <br>
-                  <p class="project-description raleway-projects">Web application for making online purchases of The Coffee Ride’s in-house roasted coffee.</p>
+                  <p class="project-description raleway-projects">Mobile-first application for making online purchases of The Coffee Ride’s in-house roasted coffee.</p>
                 </div>
               </div>
             </a>
         </div>
-
 
           <!-- MappHour Preview -->
         <div class="col-lg-6 col-sm-6">
@@ -252,8 +249,6 @@
               </div>
             </a>
         </div>
-
-
 
         <!-- Coffee Ride Modal -->
 
@@ -275,7 +270,6 @@
                 </div>
 
                 <p>
-
                   <strong>Technologies:</strong> Stripe API, Local Storage, Mocha & Chai, HTML5, CSS, JavaScript, jQuery, Materialize.
                   <br><br> I partnered with a local business in Boulder, CO called The Coffee Ride. With only a week to implement, I gathered requirements and created a full shop website offering the Coffee Ride's current selection of coffee roasts.
                   <br><br> The purpose of this project was gain experience working with a client, harness my design skills, and create a beautiful, fully functioning website within a short timeframe.
@@ -309,7 +303,7 @@
                 </button>
                 </div>
                 <div class="modal-body raleway-projects">
-                  <img class="mobile-screen-shot" src="./img/home_mockup_copy.jpeg" alt="screen_shot_mobile">
+                  <img class="mobile-screen-shot-epro" src="./img/home_mockup_copy.jpeg" alt="screen_shot_mobile">
                   <div class="links-group">
                     <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Video Demo</a>
                     <a href="https://github.com/mafutomo/EPRO" target="_blank" class="project-link-second">GitHub Repo</a>
@@ -317,21 +311,24 @@
                   <p>
                     <strong>Technologies:</strong> React Native, Native Base, D3.js, Node.js, Knex.js, Express.js, PostgreSQL, Bcrypt, JSX, JavaScript, jQuery
                     <br><br>
-                    E/Pro, a training and nutrition app that analyzes a woman’s unique cycle and birth control method.
+                    E/Pro, a training and nutrition app that analyzes a woman’s unique cycle and birth control method to provide tailored nutrition and fitness guidance.
                     <br><br>
                     The app breaks down each woman’s cycle into four distinct phases (Performace, High-Intensity & Resistance, Aerobic, and Rest) based on fluctuating estrogen and progesterone levels.
                     <br><br>
-                    With this information users can better understand their own physiology and use the app to tailor workout plans based on where they are in their cycle.
+                    With this information users can better understand their own physiology and use the app to create workout plans based on where they are in their cycle.
 
                   </p>
 
                   <br>
 
-                  <img class="screen-shot" src="./img/epro_main_page.png" alt="main_page">
-                  <p class="pic-sub-title">User's Main Page</p>
+                  <img class="screen-shot" src="./img/hormones_mockup.jpeg" alt="main_page">
+                  <p class="pic-sub-title">User's Hormone Profile Page</p>
 
-                  <img class="screen-shot" src="./img/user_base_page.png" alt="screen_shot_1">
-                  <p class="pic-sub-title">User Base Analytics Page</p>
+                  <img class="screen-shot" src="./img/create_workout_mockup.jpeg" alt="workout_page">
+                  <p class="pic-sub-title">User's Daily Workout Plan</p>
+
+                  <img class="screen-shot" src="./img/sidenav_mockup.jpeg" alt="side_navigation">
+                  <p class="pic-sub-title">Side Navigation</p>
 
                 </div>
               </div>
@@ -367,7 +364,9 @@
                     <img class="mobile-screen-shot-mappy" src="./img/mapphour_mobile1.png" alt="screen_shot_2">
 
 
+
                     <img class="mobile-screen-shot-mappy" src="./img/mappyhour_mobile2.png" alt="screen_shot_3">
+
 
                   </div>
 
@@ -375,6 +374,49 @@
               </div>
             </div>
           </div>
+
+<!-- epro wireframe modal -->
+  <div class="modal fade epro_wireframe" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">UI Design - E/Pro</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+         <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        <div class="modal-body raleway-projects">
+          <img class="mobile-screen-shot-wireframe" src="./img/epro_wireframe_mobile_preview.png" alt="screen_shot_mobile">
+          <div class="links-group">
+            <a href="https://xd.adobe.com/view/aabd5fd6-e33d-4d0e-8fbc-d1c1531c8bda?fullscreen" target="_blank" class="project-link">Live Prototype</a>
+            <a href="https://xd.adobe.com/spec/c385714b-b6ce-4f24-96b9-c97202507a61" target="_blank" class="project-link-second">Full Design Specs</a>
+          </div>
+          <p>
+            <strong>Technology:</strong> Adobe XD
+            <br><br>With any mobile application, it's important to illustrate the layout, design, and user experience before digging into any code.
+            <br><br>These wireframes allowed our team to discuss content prioritization, intended actions, and relationship between screens.
+          </p>
+
+
+          <img class="screen-shot" src="./img/epro_wireframe_mockups.jpeg" alt="epro_wireframe_mockups">
+          <p class="pic-sub-title">Main App Pages</p>
+
+
+          <img class="screen-shot" src="./img/epro_wireframes_stacked_mockup.jpeg" alt="epro_wireframes_stacked_mockup">
+          <p class="pic-sub-title">Sign Up Screens</p>
+
+          <!-- <div class="mobile-ss-container">
+            <img class="mobile-screen-shot-mappy" src="./img/mapphour_mobile1.png" alt="screen_shot_2">
+
+
+            <img class="mobile-screen-shot-mappy" src="./img/mappyhour_mobile2.png" alt="screen_shot_3"> -->
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
