updated text to mobile responsive

--- a/index.html
+++ b/index.html
@@ -90,11 +90,15 @@
           <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
 
 
-            I'm a tenacious developer with a passion for continuous learning, powerful design, and building intuitive applications. I started my journey in the tech field as an IT Project Manager  and quickly fell in love with the nitty-gritty of problem solving in code.
+            I'm a tenacious developer with a passion for continuous learning and powerful design.
+
+            <br><br>
+            From my academic background in Business & Information Systems to my experience as a Technical Project Manager in Healthcare IT, I've always been fascinated with tech. After learning JavaScript, I quickly fell in love with web development and haven't looked back since.
+
             <br><br>
             When I'm not coding you can find me climbing at Clear Creek Canyon or trail running at Marshall Mesa.
 
-            <br><br>Enough said, let's get to the good stuff!</p>
+            <br><br>Enough said, time to get to the good stuff!</p>
 
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Onwards!</a>
         </div>
@@ -117,7 +121,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-users text-primary mb-3 sr-icons"></i>
-            <h3 class="mb-3 raleway">Project Management</h3>
+            <h3 class="skill-title mb-3 raleway">Project Management</h3>
             <p class="text-muted mb-0">Software Implementations</p>
             <p class="text-muted mb-0">Integration Projects</p>
             <p class="text-muted mb-0">Agile & Scrum</p>
@@ -127,7 +131,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-aut raleway-projects">
             <i class="fa fa-4x fa-paint-brush text-primary mb-3 sr-icons"></i>
-            <h3 class="mb-3 raleway">Front-End</h3>
+            <h3 class="skill-title mb-3 raleway">Front-End</h3>
             <p class="text-muted mb-0 ">HTML5 | CSS</p>
             <p class="text-muted mb-0">JavaScript | ES6 | jQuery</p>
             <p class="text-muted mb-0">jQuery</p>
@@ -138,7 +142,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-cogs text-primary mb-3 sr-icons"></i>
-            <h3 class="mb-3 raleway">Back-End</h3>
+            <h3 class="skill-title mb-3 raleway">Back-End</h3>
             <p class="text-muted mb-0">Node.js</p>
             <p class="text-muted mb-0">Express.js</p>
             <p class="text-muted mb-0">Knex.js</p>
@@ -149,7 +153,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-check-square-o text-primary mb-3 sr-icons"></i>
-            <h3 class="mb-3 raleway">Test Driven Development</h3>
+            <h3 class="skill-title mb-3 raleway">Test Driven Development</h3>
             <p class="text-muted mb-0">Chai</p>
             <p class="text-muted mb-0">Mocha</p>
             <p class="text-muted mb-0">Supertest</p>
@@ -244,7 +248,7 @@
                     MappyHour
                   </div>
                   <br>
-                  <p class="project-description raleway-projects">Mobile-first application to view Boulder happy hour deals using the Google API.</p>
+                  <p class="project-description raleway-projects">Mobile-first application to view Boulder happy hour deals using the Google Maps API.</p>
                 </div>
               </div>
             </a>
@@ -271,8 +275,8 @@
 
                 <p>
                   <strong>Technologies:</strong> Stripe API, Local Storage, Mocha & Chai, HTML5, CSS, JavaScript, jQuery, Materialize.
-                  <br><br> I partnered with a local business in Boulder, CO called The Coffee Ride. With only a week to implement, I gathered requirements and created a full shop website offering the Coffee Ride's current selection of coffee roasts.
-                  <br><br> The purpose of this project was gain experience working with a client, harness my design skills, and create a beautiful, fully functioning website within a short timeframe.
+                  <br><br> I partnered with a local business in Boulder, CO called The Coffee Ride. Their mission is to personally deliver ethical, quality coffee using bikes. With only a week to implement, I gathered requirements and created an ecommerce website offering the Coffee Ride's current selection of coffee roasts.
+                  <br><br> This project allowed me to harness my design skills and build a beautiful, responsive website that highlights the core mission of my client.
                 </p>
 
 
@@ -311,7 +315,7 @@
                   <p>
                     <strong>Technologies:</strong> React Native, Native Base, D3.js, Node.js, Knex.js, Express.js, PostgreSQL, Bcrypt, JSX, JavaScript, jQuery
                     <br><br>
-                    E/Pro, a training and nutrition app that analyzes a woman’s unique cycle and birth control method to provide tailored nutrition and fitness guidance.
+                    E/Pro is a training and nutrition app that analyzes a woman’s unique cycle and birth control method to provide tailored nutrition and fitness guidance.
                     <br><br>
                     The app breaks down each woman’s cycle into four distinct phases (Performace, High-Intensity & Resistance, Aerobic, and Rest) based on fluctuating estrogen and progesterone levels.
                     <br><br>
@@ -352,7 +356,7 @@
                     <a href="https://github.com/mafutomo/Q2-Project" target="_blank" class="project-link-second">GitHub Repo</a>
                   </div>
                   <p>
-                    <strong>Technologies:</strong> Google API, Mocha, Chai, Supertest, Node.js, Express, Bcrypt, Knex.js, HTML5, CSS, JavaScript, jQuery, Materialize, PostgreSQL.
+                    <strong>Technologies:</strong> Google Maps API, Mocha, Chai, Supertest, Node.js, Express, Bcrypt, Knex.js, HTML5, CSS, JavaScript, jQuery, Materialize, PostgreSQL.
                     <br><br> With MappyHour users can view Boulder Happy Hour deals through our interactive map and intuitive interface. Once logged in, bookmark multiple restaurants and rate them.
                     <br><br> Users can filter the map to see what Happy Hours are available on specific days or browse through restaurant descriptions, deals, and their contact information.
                   </p>
