updated mobile screenshots to be responsive and resume intro text

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
   <section class="bg-dark text-white">
     <div class="container text-center">
-      <h2 class="mb-4 raleway">Take a gander at my resume!</h2>
+      <h2 class="resume-text mb-4 raleway">Take a gander at my resume!</h2>
       <a href="./melissa_utomo_resume.pdf" class="btn btn-light btn-xl sr-button" download="melissa_utomo_resume">Download</a>
 
     </div>
