added resume link in navigation bar

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger"
+            href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -134,7 +138,6 @@
             <h3 class="skill-title mb-3 raleway">Front-End</h3>
             <p class="text-muted mb-0 ">HTML5 | CSS</p>
             <p class="text-muted mb-0">JavaScript | ES6 | jQuery</p>
-            <p class="text-muted mb-0">jQuery</p>
             <p class="text-muted mb-0">React.js</p>
             <p class="text-muted mb-0">React Native</p>
           </div>
@@ -421,7 +424,7 @@
     </div>
   </section>
 
-  <section class="bg-dark text-white">
+  <section class="bg-dark text-white" id="resume">
     <div class="container text-center">
       <h2 class="resume-text mb-4 raleway">Take a gander at my resume!</h2>
       <a href="./melissa_utomo_resume.pdf" class="btn btn-light btn-xl sr-button" download="melissa_utomo_resume">Download</a>
