--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             From my academic background in Business & Information Systems to my experience as a Technical Project Manager in Healthcare IT, I've always been fascinated with tech. After learning JavaScript, I quickly fell in love with web development and haven't looked back since.
 
             <br><br>
-            When I'm not coding you can find me climbing at Clear Creek Canyon or trail running at Marshall Mesa.
+            When I'm not coding you can find me climbing at Boulder Canyon or trail running at Marshall Mesa.
 
             <br><br>Enough said, time to get to the good stuff!</p>
 
