--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!-- To do:
+1. Make keyboard accessible
+2. Make tiles more clickable looking - material card look
+3. Make nav items more readable
+4. Make collapse menu more readable
+4. Make skill items more readable
+5. Clean up CSS
+6. Make image progressive JPG https://www.hostinger.com/tutorials/website/improving-website-performance-using-progressive-jpeg-images -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,13 +44,11 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" class="utomo-portfolio">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-
-      <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a> -->
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -78,8 +86,7 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="mb-5 subheading-intro raleway">Project Manager | Web Developer | UI Designer</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger tell-me-btn" href="#about">Tell Me More</a>
+          <p class="mb-5 subheading-intro raleway">Web Developer | UI Designer </p>
         </div>
       </div>
     </div>
@@ -89,22 +96,20 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-white">Let's make something amazing together!</h2>
+          <h2 class="section-heading text-white">Let's innovate on accessibility!</h2>
           <hr class="light my-4">
           <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
 
 
-            I'm a tenacious developer with a passion for continuous learning and powerful design.
+            I'm a web developer with a passion for accessible design and code.
 
             <br><br>
-            From my academic background in Business & Information Systems to my experience as a Technical Project Manager in Healthcare IT, I've always been fascinated with tech. After learning JavaScript, I quickly fell in love with web development and haven't looked back since.
+
+            I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
 
             <br><br>
-            When I'm not coding you can find me climbing at Boulder Canyon or trail running at Marshall Mesa.
+            On the weekends, can find me rock climbing at Boulder Canyon or trail running at Marshall Mesa.
 
-            <br><br>Enough said, time to get to the good stuff!</p>
-
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Onwards!</a>
         </div>
       </div>
     </div>
@@ -114,7 +119,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Skills</h2>
+          <h2 class="section-heading">My skills</h2>
           <hr class="my-4">
         </div>
       </div>
@@ -122,19 +127,9 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="service-box mt-5 mx-auto raleway-projects">
-            <i class="fa fa-4x fa-users text-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3 raleway">Project Management</h3>
-            <p class="text-muted mb-0">Software Implementations</p>
-            <p class="text-muted mb-0">Integration Projects</p>
-            <p class="text-muted mb-0">Agile & Scrum</p>
-            <p class="text-muted mb-0">Git Workflow</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-aut raleway-projects">
-            <i class="fa fa-4x fa-paint-brush text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
             <h3 class="skill-title mb-3 raleway">Front-End</h3>
             <p class="text-muted mb-0 ">HTML5 | CSS</p>
             <p class="text-muted mb-0">JavaScript | ES6 | jQuery</p>
@@ -142,9 +137,9 @@
             <p class="text-muted mb-0">React Native</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
-            <i class="fa fa-4x fa-cogs text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x fa-cogs icon-primary mb-3 sr-icons"></i>
             <h3 class="skill-title mb-3 raleway">Back-End</h3>
             <p class="text-muted mb-0">Node.js</p>
             <p class="text-muted mb-0">Express.js</p>
@@ -153,9 +148,9 @@
             <p class="text-muted mb-0">PostgreSQL</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
-            <i class="fa fa-4x fa-check-square-o text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x fa-check-square-o icon-primary mb-3 sr-icons"></i>
             <h3 class="skill-title mb-3 raleway">Test Driven Development</h3>
             <p class="text-muted mb-0">Chai</p>
             <p class="text-muted mb-0">Mocha</p>
@@ -170,7 +165,7 @@
     <div class="container">
       <div class="row">
           <div class="col-lg-12 text-center">
-          <h2 class="section-heading portfolio-heading">Recent Work</h2>
+          <h2 class="section-heading portfolio-heading">Recent projects</h2>
           <p class="text-muted mb-0 hint-text">click images to see more</p>
           <hr class="my-4 project-line">
         </div>
@@ -178,11 +173,8 @@
     </div>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
-
-
         <!-- e/pro preview -->
-                <div class="col-lg-6 col-sm-6">
+                <div class="col-lg-6 col-sm-6 image-tile">
                   <a class="portfolio-box" href=# data-toggle="modal" data-target=".epro">
                       <img class="img-fluid" src="img/portfolio/thumbnails/epro_mockup.jpeg" alt="">
                       <div class="portfolio-box-caption">
@@ -424,7 +416,7 @@
     </div>
   </section>
 
-  <section class="bg-dark text-white" id="resume">
+  <section class="bg-primary text-white" id="resume">
     <div class="container text-center">
       <h2 class="resume-text mb-4 raleway">Take a gander at my resume!</h2>
       <a href="./melissa_utomo_resume.pdf" class="btn btn-light btn-xl sr-button" download="melissa_utomo_resume">Download</a>
@@ -436,7 +428,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading">Let's Get In Touch</h2>
+          <h2 class="section-heading">Let's get in touch</h2>
           <hr class="my-4">
         </div>
       </div>
@@ -470,7 +462,7 @@
     </div>
   </section>
 
-  <p class="copyright">&#9400; 2018 Melissa Utomo</p>
+  <p class="copyright">&#9400; 2020 Melissa Utomo</p>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
