added notes to html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 4. Make collapse menu more readable
 4. Make skill items more readable
 5. Clean up CSS
-6. Make image progressive JPG https://www.hostinger.com/tutorials/website/improving-website-performance-using-progressive-jpeg-images -->
+6. Make image progressive JPG https://www.hostinger.com/tutorials/website/improving-website-performance-using-progressive-jpeg-images
+7. add background for white
+8. add pronouns -->
 
 
 <!DOCTYPE html>
