added pdf and additional accessibility/style changes

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
+
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
@@ -67,9 +68,6 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger"
             href="#contact">Contact</a>
           </li>
@@ -88,7 +86,7 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="mb-5 subheading-intro raleway">Web Developer | UI Designer </p>
+          <p class="mb-5 subheading-intro raleway">she &#183; her &#183; hers </p>
         </div>
       </div>
     </div>
@@ -98,19 +96,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-white">Let's innovate on accessibility!</h2>
-          <hr class="light my-4">
+          <h2 class="section-heading text-white">Web Developer &#183; UI Designer</h2>
+          <hr class="my-4">
           <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
-
-
-            I'm a web developer with a passion for accessible design and code.
-
-            <br><br>
 
             I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
 
             <br><br>
-            On the weekends, can find me rock climbing at Boulder Canyon or trail running at Marshall Mesa.
+            On the weekends, you can find me rock climbing at Boulder Canyon or trail running at Marshall Mesa.
 
         </div>
       </div>
@@ -130,11 +123,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
-          <div class="service-box mt-5 mx-aut raleway-projects">
+          <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3 raleway">Front-End</h3>
-            <p class="text-muted mb-0 ">HTML5 | CSS</p>
-            <p class="text-muted mb-0">JavaScript | ES6 | jQuery</p>
+            <h3 class="skill-title mb-3">Front-End</h3>
+            <p class="text-muted mb-0 ">HTML5 &#183; CSS &#183; SASS</p>
+            <p class="text-muted mb-0">JavaScript &#183; ES6 &#183; jQuery</p>
             <p class="text-muted mb-0">React.js</p>
             <p class="text-muted mb-0">React Native</p>
           </div>
@@ -142,7 +135,7 @@
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-cogs icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3 raleway">Back-End</h3>
+            <h3 class="skill-title mb-3">Back-End</h3>
             <p class="text-muted mb-0">Node.js</p>
             <p class="text-muted mb-0">Express.js</p>
             <p class="text-muted mb-0">Knex.js</p>
@@ -153,7 +146,7 @@
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-check-square-o icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3 raleway">Test Driven Development</h3>
+            <h3 class="skill-title mb-3">Test Driven <br> Development</h3>
             <p class="text-muted mb-0">Chai</p>
             <p class="text-muted mb-0">Mocha</p>
             <p class="text-muted mb-0">Supertest</p>
@@ -168,10 +161,13 @@
       <div class="row">
           <div class="col-lg-12 text-center">
           <h2 class="section-heading portfolio-heading">Recent projects</h2>
-          <p class="text-muted mb-0 hint-text">click images to see more</p>
+          <p class="info-text mb-0 hint-text">click images to see more</p>
           <hr class="my-4 project-line">
         </div>
       </div>
+    </div>
+    <div class="container container-center">
+        <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="640" height="480"></iframe>
     </div>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
@@ -418,14 +414,6 @@
     </div>
   </section>
 
-  <section class="bg-primary text-white" id="resume">
-    <div class="container text-center">
-      <h2 class="resume-text mb-4 raleway">Take a gander at my resume!</h2>
-      <a href="./melissa_utomo_resume.pdf" class="btn btn-light btn-xl sr-button" download="melissa_utomo_resume">Download</a>
-
-    </div>
-  </section>
-
   <section id="contact">
     <div class="container">
       <div class="row">
@@ -476,10 +464,6 @@
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
-
-
-
-
 </body>
 
 </html>
