--- a/index.html
+++ b/index.html
@@ -1,64 +1,31 @@
-<!-- To do:
-1. Make keyboard accessible
-2. Make tiles more clickable looking - material card look
-3. Make nav items more readable
-4. Make collapse menu more readable
-4. Make skill items more readable
-5. Clean up CSS
-6. Make image progressive JPG https://www.hostinger.com/tutorials/website/improving-website-performance-using-progressive-jpeg-images
-7. add background for white
-9. make page shifting stop or have an option for non-motion enabled
-10. Add a description for MP
-BONUS: add favorite resources-
-- diverse stock photos
-- web accessibility guidelines
--
--->
-
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
   <meta name="description" content="">
   <meta name="author" content="">
-
   <title>Melissa Utomo</title>
-
-
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <link rel='icon' href='./favicon.ico' type='image/x-icon'/ >
-
+  <link rel='icon' href='./favicon.ico' type='image/x-icon' />
   <!-- Custom fonts for this template -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
-
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
   <!-- Custom styles for this template -->
   <link href="./main.css" rel="stylesheet">
-
-
-
 </head>
 
 <body id="page-top" class="utomo-portfolio">
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" role="navigation">
     <div class="container">
-
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -74,14 +41,12 @@ BONUS: add favorite resources-
             <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger"
-            href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
   <header class="masthead text-center text-white d-flex">
     <div class="container my-auto">
       <div class="row header-content">
@@ -97,7 +62,6 @@ BONUS: add favorite resources-
       </div>
     </div>
   </header>
-
   <section class="new-bg bg-primary" id="about">
     <div class="container">
       <div class="row">
@@ -105,17 +69,13 @@ BONUS: add favorite resources-
           <h2 class="section-heading text-white">Web Developer &#183; UI Designer</h2>
           <hr class="my-4">
           <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
-
             I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
-
             <br><br>
             On the weekends, you can find me rock climbing at Boulder Canyon or trail running at Marshall Mesa.
-
         </div>
       </div>
     </div>
   </section>
-
   <section id="services">
     <div class="container">
       <div class="row">
@@ -125,13 +85,12 @@ BONUS: add favorite resources-
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3">Front-End</h3>
+            <h3 class="skill-title mb-3">Front-end</h3>
             <p class="text-muted mb-0 ">HTML5 &#183; CSS &#183; SASS</p>
             <p class="text-muted mb-0">JavaScript &#183; ES6 &#183; jQuery</p>
             <p class="text-muted mb-0">React.js</p>
@@ -141,7 +100,7 @@ BONUS: add favorite resources-
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-cogs icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3">Back-End</h3>
+            <h3 class="skill-title mb-3">Back-end</h3>
             <p class="text-muted mb-0">Node.js</p>
             <p class="text-muted mb-0">Express.js</p>
             <p class="text-muted mb-0">Knex.js</p>
@@ -152,7 +111,7 @@ BONUS: add favorite resources-
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto raleway-projects">
             <i class="fa fa-4x fa-check-square-o icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3">Test Driven <br> Development</h3>
+            <h3 class="skill-title mb-3">Test driven <br> development</h3>
             <p class="text-muted mb-0">Chai</p>
             <p class="text-muted mb-0">Mocha</p>
             <p class="text-muted mb-0">Supertest</p>
@@ -161,11 +120,10 @@ BONUS: add favorite resources-
       </div>
     </div>
   </section>
-
   <section class="p-0 raleway" id="portfolio">
     <div class="container">
       <div class="row">
-          <div class="col-lg-12 text-center">
+        <div class="col-lg-12 text-center">
           <h2 class="section-heading portfolio-heading">Most recent project</h2>
           <!-- <p class="info-text mb-0 hint-text">click images to see more</p> -->
           <hr class="my-4 project-line">
@@ -176,7 +134,6 @@ BONUS: add favorite resources-
     </div>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
         <!--  Mountain project preview -->
         <div class="col-lg-6 col-sm-12 image-tile container-center" id="mountain-project">
           <a class="portfolio-box" href=# data-toggle="modal" data-target=".mp" role="button">
@@ -197,201 +154,34 @@ BONUS: add favorite resources-
         </div>
 
         <!-- Mountain Project modal -->
-        <!-- E/PRO Modal -->
-          <div class="modal fade mp" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg" id="mp_modal">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">THE CLIMBING COMMUNITY AND INCLUSION</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                 <span aria-hidden="true">&times;</span>
-                </button>
-                </div>
-                <div class="modal-body raleway-projects">
-
-                  <div class="links-group">
-                    <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Download a copy</a>
-                  </div>
-                  <p>
-                    <strong>Skills:</strong> HTML, CSS, web accessibility, user testing
-
-                  </p>
-
-                  <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="480"></iframe>
-
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-        <!-- Coffee Ride Modal -->
-
-        <div class="modal fade coffee-ride" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg">
+        <div class="modal fade mp" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg" id="mp_modal">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title modal-title">THE COFFEE RIDE</h5>
+                <h5 class="modal-title">THE CLIMBING COMMUNITY AND INCLUSION</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-               <span aria-hidden="true">&times;</span>
-              </button>
+                 <span aria-hidden="true">&times;</span>
+                </button>
               </div>
               <div class="modal-body raleway-projects">
-                <img class="mobile-screen-shot" src="./img/coffee_ride_mobile.png" alt="screen_shot_mobile">
-
-                <div class="links-group">
-                  <a href="http://thecoffeeride.mutomo.surge.sh/index.html" target="_blank" class="project-link">Live Site</a>
-                  <a href="https://github.com/mafutomo/the_coffee_ride" target="_blank" class="project-link-second">GitHub Repo</a>
-                </div>
-
                 <p>
-                  <strong>Technologies:</strong> Stripe API, Local Storage, Mocha & Chai, HTML5, CSS, JavaScript, jQuery, Materialize.
-                  <br><br> I partnered with a local business in Boulder, CO called The Coffee Ride. Their mission is to personally deliver ethical, quality coffee using bikes. With only a week to implement, I gathered requirements and created an ecommerce website offering the Coffee Ride's current selection of coffee roasts.
-                  <br><br> This project allowed me to harness my design skills and build a beautiful, responsive website that highlights the core mission of my client.
+                  <strong>Core value:</strong> Empower Mountain Project users to report inappropriate route names to foster a safe,
+                  accessible, and inclusive online experience.
+                  <br><br>
+                  <strong>Skills:</strong> HTML, CSS, web accessibility, user testing
                 </p>
-
-
-                <img class="screen-shot" src="./img/coffee_ride_ss1.png" alt="screen_shot_1">
-                <p class="pic-sub-title">Landing Page</p>
-
-                <img class="screen-shot" src="./img/coffee_ride_ss2.png" alt="screen_shot_2">
-                <p class="pic-sub-title">Shop Page</p>
-
-                <img class="screen-shot" src="./img/coffee_ride_ss3.png" alt="screen_shot_3">
-                <p class="pic-sub-title">Adding to Cart</p>
-
-                <img class="screen-shot" src="./img/coffee_ride_ss4.png" alt="screen_shot_4">
-                <p class="pic-sub-title">Checkout Page</p>
+                <div class="links-group">
+                  <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Download a copy</a>
+                </div>
+                <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="480"></iframe>
               </div>
             </div>
           </div>
-        </div>
-
-        <!-- E/PRO Modal -->
-          <div class="modal fade epro" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">E/PRO</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                 <span aria-hidden="true">&times;</span>
-                </button>
-                </div>
-                <div class="modal-body raleway-projects">
-                  <img class="mobile-screen-shot-epro" src="./img/home_mockup_copy.jpeg" alt="screen_shot_mobile">
-                  <div class="links-group">
-                    <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Video Demo</a>
-                    <a href="https://github.com/mafutomo/EPRO" target="_blank" class="project-link-second">GitHub Repo</a>
-                  </div>
-                  <p>
-                    <strong>Technologies:</strong> React Native, Native Base, D3.js, Node.js, Knex.js, Express.js, PostgreSQL, Bcrypt, JSX, JavaScript, jQuery
-                    <br><br>
-                    E/Pro is a training and nutrition app that analyzes a woman’s unique cycle and birth control method to provide tailored nutrition and fitness guidance.
-                    <br><br>
-                    The app breaks down each woman’s cycle into four distinct phases (Performace, High-Intensity & Resistance, Aerobic, and Rest) based on fluctuating estrogen and progesterone levels.
-                    <br><br>
-                    With this information users can better understand their own physiology and use the app to create workout plans based on where they are in their cycle.
-
-                  </p>
-
-                  <br>
-
-                  <img class="screen-shot" src="./img/hormones_mockup.jpeg" alt="main_page">
-                  <p class="pic-sub-title">User's Hormone Profile Page</p>
-
-                  <img class="screen-shot" src="./img/create_workout_mockup.jpeg" alt="workout_page">
-                  <p class="pic-sub-title">User's Daily Workout Plan</p>
-
-                  <img class="screen-shot" src="./img/sidenav_mockup.jpeg" alt="side_navigation">
-                  <p class="pic-sub-title">Side Navigation</p>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-        <!-- MappyHour Modal -->
-          <div class="modal fade mappyhour" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">MAPPYHOUR</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                 <span aria-hidden="true">&times;</span>
-                </button>
-                </div>
-                <div class="modal-body raleway-projects">
-                  <img class="mobile-screen-shot" src="./img/mappyhour_mobile.png" alt="screen_shot_mobile">
-                  <div class="links-group">
-                    <a href="http://mappyhour.herokuapp.com/index.html" target="_blank" class="project-link">Live Site</a>
-                    <a href="https://github.com/mafutomo/Q2-Project" target="_blank" class="project-link-second">GitHub Repo</a>
-                  </div>
-                  <p>
-                    <strong>Technologies:</strong> Google Maps API, Mocha, Chai, Supertest, Node.js, Express, Bcrypt, Knex.js, HTML5, CSS, JavaScript, jQuery, Materialize, PostgreSQL.
-                    <br><br> With MappyHour users can view Boulder Happy Hour deals through our interactive map and intuitive interface. Once logged in, bookmark multiple restaurants and rate them.
-                    <br><br> Users can filter the map to see what Happy Hours are available on specific days or browse through restaurant descriptions, deals, and their contact information.
-                  </p>
-
-
-                  <img class="screen-shot" src="./img/mappyhour_ss1.png" alt="screen_shot_1">
-
-                  <div class="mobile-ss-container">
-                    <img class="mobile-screen-shot-mappy" src="./img/mapphour_mobile1.png" alt="screen_shot_2">
-
-
-
-                    <img class="mobile-screen-shot-mappy" src="./img/mappyhour_mobile2.png" alt="screen_shot_3">
-
-
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-<!-- epro wireframe modal -->
-  <div class="modal fade epro_wireframe" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">UI Design - E/Pro</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-         <span aria-hidden="true">&times;</span>
-        </button>
-        </div>
-        <div class="modal-body raleway-projects">
-          <img class="mobile-screen-shot-wireframe" src="./img/epro_wireframe_mobile_preview.png" alt="screen_shot_mobile">
-          <div class="links-group">
-            <a href="https://xd.adobe.com/view/aabd5fd6-e33d-4d0e-8fbc-d1c1531c8bda?fullscreen" target="_blank" class="project-link">Live Prototype</a>
-            <a href="https://xd.adobe.com/spec/c385714b-b6ce-4f24-96b9-c97202507a61" target="_blank" class="project-link-second">Full Design Specs</a>
-          </div>
-          <p>
-            <strong>Technology:</strong> Adobe XD
-            <br><br>With any mobile application, it's important to illustrate the layout, design, and user experience before digging into any code.
-            <br><br>These wireframes allowed our team to discuss content prioritization, intended actions, and relationship between screens.
-          </p>
-
-
-          <img class="screen-shot" src="./img/epro_wireframe_mockups.jpeg" alt="epro_wireframe_mockups">
-          <p class="pic-sub-title">Main App Pages</p>
-
-
-          <img class="screen-shot" src="./img/epro_wireframes_stacked_mockup.jpeg" alt="epro_wireframes_stacked_mockup">
-          <p class="pic-sub-title">Sign Up Screens</p>
-
-          </div>
-
         </div>
       </div>
     </div>
-  </div>
-
-      </div>
-
     </div>
   </section>
-
   <section id="contact">
     <div class="container">
       <div class="row">
@@ -429,13 +219,11 @@ BONUS: add favorite resources-
       </div>
     </div>
   </section>
-
   <p class="copyright">&#9400; 2020 Melissa Utomo</p>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
