--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   <strong>Core value:</strong> Empower Mountain Project users to report inappropriate route names to foster a safe,
                   accessible, and inclusive online experience.
                   <br><br>
-                  <strong>Skills:</strong> HTML, CSS, web accessibility, user testing
+                  <strong>Skills:</strong> HTML, CSS, web accessibility, user testing.
                 </p>
                 <div class="links-group">
                   <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Download a copy</a>
